Compatibility with bundle managers

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 qmake project syntax file for Vim
-Copyright (C) 2011 Arto Jonsson <ajonsson@kapsi.fi>
+Copyright (C) 2011-2012 Arto Jonsson <artoj@iki.fi>
 
 ABOUT
 
@@ -9,16 +9,16 @@ ABOUT
 
 INSTALLATION
 
-    Put the 'qmake.vim' file to your $VIMRUNTIME/syntax/ directory. Then you
-    can use:
+    Put the 'syntax/qmake.vim' file to your $VIMRUNTIME/syntax/ directory.
+    Then you can use:
 
         :set syntax=qmake
 
     To use the syntax in the current buffer.
-    
-    To set the syntax automatically for certain file types, such as '.pro' in
-    this case, create a 'pro.vim' in $VIMRUNTIME/ftdetect/ directory and add:
 
-        au BufRead,BufNewFile *.pro set filetype=qmake
+    To set the syntax automatically for certain file types, such as '.pro' in
+    this case, put the 'ftdetect/pro.vim' in $VIMRUNTIME/ftdetect/ directory.
 
     See ':help ftdetect' for more information.
+
+    Alternatively you can use bundle manager such as Vundle or Pathogen.
